--- a/camera calibration/1.md
+++ b/camera calibration/1.md
@@ -27,6 +27,89 @@ This toolkit includes:
 ```bash
 pip install -r requirements.txt
 
+🚀 Usage
+Step 1: Capture Calibration Images
+Capture multiple images of a chessboard pattern from different angles using:
 
+```bash
+python capture_calibration_images.py
+```
+Controls:
+- c → Capture an image
+
+- q or Esc → Quit
+
+- Images are saved in calibration_images/ directory
+
+### Step 2: Run Camera Calibration
+Process the captured images to compute the camera matrix and distortion coefficients:
+
+```bash
+python camera_calibration.py
+```
+Output Files (saved in output/):
+- calibration_data.pkl → Complete calibration data in Pickle format
+- camera_matrix.txt → Camera matrix in text format
+- distortion_coefficients.txt → Distortion coefficients in text format
+- Undistorted calibration images (if enabled)
+
+### Step 3: Test Calibration with Live Video
+Apply calibration to a live video feed:
+
+```bash
+python live_undistortion.py
+```
+Controls:
+- d → Toggle between distorted and undistorted view
+- q → Quit
+
+### ⚙ Configuration
+Modify these variables in the corresponding scripts:
+
+In capture_calibration_images.py:
+```python
+CAMERA_ID = 0  # Camera ID (0 for built-in webcam)
+CHESSBOARD_SIZE = (9, 6)  # Inner corners per chessboard row/column
+OUTPUT_DIRECTORY = 'calibration_images'
+```
+In camera_calibration.py:
+```python
+CHESSBOARD_SIZE = (9, 6)
+SQUARE_SIZE = 2.5  # Size of a square in cm
+CALIBRATION_IMAGES_PATH = 'calibration_images/*.jpg'
+OUTPUT_DIRECTORY = 'output'
+SAVE_UNDISTORTED = True
+```
+In live_undistortion.py:
+```python
+CAMERA_ID = 0
+CALIBRATION_FILE = 'output/calibration_data.pkl'
+```
+### 📸 How It Works
+### Camera Calibration Process:
+1. Image Collection → Capture multiple chessboard images
+2. Corner Detection → Identify chessboard corners
+3. Calibration → Compute camera matrix & distortion coefficients
+4. Undistortion → Remove lens distortion
+
+### Camera Model Used:
+- Pinhole camera model with radial & tangential distortion
+- Camera Matrix: Focal lengths & optical centers
+- Distortion Coefficients: Correct lens distortion effects
+### 🖼 Example Results
+After calibration, you can expect: ✔ Undistorted Images → Straight lines remain straight ✔ Accurate Measurements → Objects can be measured in real-world units ✔ 3D Reconstruction & AR Applications → Useful for augmented reality
+
+### 🔧 Troubleshooting
+Issue	Possible Fixes
+Chessboard Not Found	Ensure good lighting & full visibility
+Poor Calibration	Use more images from varied angles
+Camera Not Found	Check CAMERA_ID (default: 0 for webcams)
+### 📜 License
+This project is licensed under the MIT License – see the LICENSE file for details.
+
+### ⭐ Acknowledgments
+OpenCV for providing powerful computer vision algorithms
+
+OpenCV documentation for guiding camera calibration techniques
 
 Thanks to https://github.com/niconielsen32/camera-calibration for the great effort on camera calibration in his work.
