--- a/camera calibration/multi_cam_cal/1.md
+++ b/camera calibration/multi_cam_cal/1.md
@@ -1,1 +1,15 @@
 
+# Quick diagnosis
+python camera_troubleshooter.py --quick
+
+# Full diagnosis  
+python camera_troubleshooter.py
+
+# Use the fixed capture script with DirectShow backend
+python fixed_calibration_capture.py --type webcam --camera-id 1 --list-cameras
+
+# Then capture with working camera
+python fixed_calibration_capture.py --type webcam --camera-id 1 --num-images 20
+
+# Capture with RealSense D405
+python fixed_calibration_capture.py --type realsense --realsense-serial 230322270171 --num-images 20
