--- a/camera calibration/multi_cam_cal/1.md
+++ b/camera calibration/multi_cam_cal/1.md
@@ -13,3 +13,6 @@ python fixed_calibration_capture.py --type webcam --camera-id 1 --num-images 20
 
 # Capture with RealSense D405
 python fixed_calibration_capture.py --type realsense --realsense-serial 230322270171 --num-images 20
+
+# Multi camera calibration
+(realsense) E:\vscode\calibration>python multi_camera_calibration.py --single_camera camera_5 --base_path calibration_images --square_size 3.3 --save_undistorted --debug
