--- a/camera calibration/multi_cam_cal/1.md
+++ b/camera calibration/multi_cam_cal/1.md
@@ -16,3 +16,19 @@ python fixed_calibration_capture.py --type realsense --realsense-serial 23032227
 
 # Multi camera calibration
 (realsense) E:\vscode\calibration>python multi_camera_calibration.py --single_camera camera_5 --base_path calibration_images --square_size 3.3 --save_undistorted --debug
+
+
+
+# Test camera_2 specifically
+python multi_camera_live_undistortion.py --camera camera_2
+
+# Test camera_0
+python multi_camera_live_undistortion.py --camera camera_0
+
+
+python multi_camera_live_undistortion.py --list-cameras
+
+python multi_camera_live_undistortion.py --calibration-path my_calibration_results
+
+# Check your calibration directory structure
+python multi_camera_live_undistortion.py --list-cameras --calibration-path calibration_results
