--- a/camera calibration/multi_cam_cal/1.md
+++ b/camera calibration/multi_cam_cal/1.md
@@ -32,3 +32,18 @@ python multi_camera_live_undistortion.py --calibration-path my_calibration_resul
 
 # Check your calibration directory structure
 python multi_camera_live_undistortion.py --list-cameras --calibration-path calibration_results
+
+# Run full calibration
+python stereo_calibration.py --rgb-camera 0
+
+# Test existing calibration
+python stereo_calibration.py --test-only
+
+# Discover all cameras first
+python multi_camera_calibration1.py --discover-only
+
+# Full calibration with interactive selection
+python multi_camera_calibration1.py
+
+# Save to custom directory
+python multi_camera_calibration1.py --calibration-path my_camera_setup
