--- a/camera calibration/multi_cam_cal/1.md
+++ b/camera calibration/multi_cam_cal/1.md
@@ -47,3 +47,7 @@ python multi_camera_calibration1.py
 
 # Save to custom directory
 python multi_camera_calibration1.py --calibration-path my_camera_setup
+
+# multi camera calibration(in our case two realsense, and two platform cameras)
+
+(realsense) E:\vscode\calibration>python stereo_calibration2.py
