--- a/camera calibration/multi_cam_cal/1.md
+++ b/camera calibration/multi_cam_cal/1.md
@@ -51,3 +51,6 @@ python multi_camera_calibration1.py --calibration-path my_camera_setup
 # multi camera calibration(in our case two realsense, and two platform cameras)
 
 (realsense) E:\vscode\calibration>python stereo_calibration2.py
+
+# Align multi cams
+(realsense) E:\vscode\calibration>python four_camera_align.py
