--- a/camera calibration/multi_cam_cal/1.md
+++ b/camera calibration/multi_cam_cal/1.md
@@ -54,3 +54,6 @@ python multi_camera_calibration1.py --calibration-path my_camera_setup
 
 # Align multi cams
 (realsense) E:\vscode\calibration>python four_camera_align.py
+
+# Synchronised system
+(realsense) E:\vscode\calibration>python synchronized_system.py
